# packages/contracts/openapi.json
@@ -1122,6 +1122,43 @@
         "summary": "Update Project"
       }
     },
+    "/v1/projects/{project_id}/audio": {
+      "get": {
+        "operationId": "stream_project_audio_v1_projects__project_id__audio_get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "project_id",
+            "required": true,
+            "schema": {
+              "title": "Project Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Stream Project Audio"
+      }
+    },
     "/v1/projects/{project_id}/exports/midi": {
       "get": {
         "operationId": "export_project_midi_v1_projects__project_id__exports_midi_get",
